# flask-tutorial

./: pyproject.toml
flaskr/: __init__.py
flaskr/templates/auth/: register.html
